--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -25,18 +25,7 @@ address,caption,cite,code,dfn,em,th{font-style: normal;font-weight: normal;}
 .fl{float: left;}
 img{display: block; width: 100%; border: 0;}
 
-
-
-
-
-
 /*===================字体图标 start  ../font/=========================*/
-
-
-
-
-
-
 @font-face {font-family: "iconfont";
     src: url('../hnjtt/font/iconfont.eot?t=1540978392215'); /* IE9*/
     src: url('../hnjtt/font/iconfont.eot?t=1540978392215#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -72,25 +61,7 @@ img{display: block; width: 100%; border: 0;}
 .icon-up:before { content: "\e6b4"; }
 
 .icon-you:before { content: "\e6b5"; }
-
-
-
-
-
-
-
-
-
-
-
 /*===================字体图标 end=========================*/
-
-
-
-
-
-
-
 
 /*============================================index start============================================*/
 .indexWrap{width: 1180px; margin: 30px auto;}
@@ -101,20 +72,20 @@ header{width: 100%; }
 /*==pc端导航==*/
 .header_top{min-width: 1180px;height: 48px;border-top: 1px solid #dfdfdf;border-bottom: 1px solid #dfdfdf;background-color: #f8f8f8; }
 .header_topNav{width: 1180px; margin: 0 auto; position: relative;}
-.header_topNav .firstNav{float: left;}
-.header_topNav .firstNav>li{float: left;}
+/*.header_topNav .firstNav{float: left;}*/
+/*.header_topNav .firstNav>li{float: left;}*/
 .header_topNav .firstNav>li>a{display: block;height: 48px;line-height: 48px;padding: 0 15px;color: #333;font-size: 14px;}
 .header_topNav .firstNav>li:first-of-type a{padding-left: 0;}
 .lastClass{ position: relative;border-left: 1px solid rgba(0,0,0,0);border-right: 1px solid rgba(0,0,0,0); z-index: 1000;}
 .lastClass:hover{border-left: 1px solid #c7c7c7;border-right: 1px solid #c7c7c7;box-shadow: 0 -1px 1px #c7c7c7; background: #fff;}
-.lastClass:hover .downClass{display: block;}
+.lastClass:hover .downClass{display: flex; flex-wrap: wrap;}
 .lastClass:hover .more{color: #e20015;}
 .header_topNav .logo{display: none;}
 /*下拉菜单 */
 .downClass{position: absolute; right: -1px;top: 46px; width: 350px; background: #fff; border: 1px solid #c7c7c7;box-shadow: 0 1px 1px #c7c7c7; z-index: 1; border-top: 0; display: none;}
-.downClass:before{content: ''; display: block; position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
+.downClass:before{content: ''; display: flex; flex-wrap: wrap; position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
 .downClass li{border-bottom: 1px dashed #c7c7c7; height: 48px;line-height: 48px; }
-.downClass li a{color: #333;font-size: 14px; float: left;  height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
+.downClass li a{color: #333;font-size: 14px; height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
 .downClass li a:hover{color: #e20015;}
 .downClass li:last-of-type{border-bottom: 0;}
 /*==移动端导航==*/
@@ -475,29 +446,54 @@ footer{width: 1180px; margin: 90px auto 0 auto; }
     .rightTop ul li p{width:100%; float: left; font-size: 14px;line-height: 20px;padding-top: 9px;}
 }
 
-/*&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&张燕玲 start&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&*/
 /*============================================header start=============================================*/
 header{width: 100%; z-index: 10000;}
 /*======header_top start======*/
 /*==pc端导航==*/
-.header_top{min-width: 1000px;height: 48px;border-top: 1px solid #dfdfdf;border-bottom: 1px solid #dfdfdf;background-color: #f8f8f8; }
-.header_topNav{width: 1000px; margin: 0 auto; position: relative;}
-.header_topNav .firstNav{float: left;}
-.header_topNav .firstNav>li{float: left;}
-.header_topNav .firstNav>li>a{display: block;height: 48px;line-height: 48px;padding: 0 15px;color: #333;font-size: 14px;}
+.header_top{min-width: 1180px;height: 48px;border-top: 1px solid #dfdfdf;border-bottom: 1px solid #dfdfdf;background-color: #f8f8f8; }
+.header_topNav{
+    width: 1180px; margin: 0 auto; position: relative;
+    display: flex;
+}
+.header_topNav .firstNav{
+    /*float: left;*/
+    display: flex;
+    flex: 1;
+}
+.header_topNav .firstNav>li{
+    /*float: left;*/
+    justify-self: flex-start;
+}
+.header_topNav .firstNav>li>a, .header_topNav .rightNav>li>a{display: block;height: 48px;line-height: 48px;padding: 0 15px;color: #333;font-size: 14px;}
 .header_topNav .firstNav>li:first-of-type a{padding-left: 0;}
 .lastClass{ position: relative;border-left: 1px solid rgba(0,0,0,0);border-right: 1px solid rgba(0,0,0,0); z-index: 1000;}
 .lastClass:hover{border-left: 1px solid #c7c7c7;border-right: 1px solid #c7c7c7;box-shadow: 0 -1px 1px #c7c7c7; background: #fff;}
-.lastClass:hover .downClass{display: block;}
+.lastClass:hover .downClass{
+    /*display: block;*/
+    display: flex; flex-wrap: wrap;
+}
 .lastClass:hover .more{color: #e20015;}
 .header_topNav .logo{display: none;}
 /*下拉菜单 */
 .downClass{position: absolute; right: -1px;top: 46px; width: 350px; background: #fff; border: 1px solid #c7c7c7;box-shadow: 0 1px 1px #c7c7c7; z-index: 1; border-top: 0; display: none;}
-.downClass:before{content: ''; display: block; position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
-.downClass li{border-bottom: 1px dashed #c7c7c7; height: 48px;line-height: 48px; }
-.downClass li a{color: #333;font-size: 14px; float: left;  height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
+.downClass:before{
+    content: '';
+    /*display: block;*/
+    display: flex; flex-wrap: wrap;
+    position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
+.downClass li{
+    border-bottom: 1px dashed #c7c7c7; height: 48px;line-height: 48px;
+}
+.downClass li a{
+    color: #333;font-size: 14px;
+    /*float: left; */
+    height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
 .downClass li a:hover{color: #e20015;}
 .downClass li:last-of-type{border-bottom: 0;}
+/*注册登录菜单*/
+.rightNav {display: flex; justify-self: flex-end;}
+.rightNav li {justify-self: flex-end;}
+.rightNav li:last-of-type a {padding-right: 0;}
 /*==移动端导航==*/
 .slideDown{height:48px; line-height: 48px; float: right;margin-right: 15px; z-index: 100; display: none;}
 .slideDown i{font-size: 26px; color: #666;}
@@ -509,7 +505,10 @@ header{width: 100%; z-index: 10000;}
 /*======header_top end======*/
 
 /*======header_middle start======*/
-.header_middle{width:1000px;margin:14px auto;}
+.header_middle{
+    /*width: 1000px;*/
+    width:1180px;
+    margin:14px auto;}
 .logo{float: left;}
 .logo a img{width: 240px;}
 
@@ -1028,7 +1027,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 .pgwSlideshow {
 	width: 100%;
 	background: #fff;
-	
+
 	display: none
 }
 
@@ -1059,7 +1058,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 	display: block;
 	height: 706px;
 	margin: auto;
-	
+
 }
 
 .pgwSlideshow .ps-caption {
@@ -1090,7 +1089,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 	position: relative;
 	width: 865px;
 	margin: 30px auto 0 auto;
-	
+
 }
 
 .pgwSlideshow .ps-list ul {
@@ -1100,14 +1099,14 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 
 	margin: 0;
 
-	
+
 	left: 0;
 }
 
 .pgwSlideshow .ps-list li {
 	float: left;
 	display: table;
-	width: 90px; 
+	width: 90px;
 	height: 90px;
 }
 
@@ -1117,7 +1116,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 	opacity: .6;
 	filter: alpha(opacity=60);
 	vertical-align: middle; text-align: center;
-	
+
 }
 
 .pgwSlideshow .ps-list li img {
@@ -1136,7 +1135,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 	overflow: hidden;
 	display: table-cell;
 	vertical-align: middle; text-align: center;
-	
+
 }
 
 
@@ -1531,8 +1530,6 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 
 
 
-    /****************************娟 start**********************************/
-
     /**********咨询详情 start***********/
     /*.consultation-wrap{display: none}*/
     .listLeft-txt{text-indent: 0!important;}
@@ -1557,10 +1554,6 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
 
     /***********咨询首页 end**************/
 
-    /****************************娟 end**********************************/
-
-
-
     /*============================================video detail start============================================*/
     .videoDetail{width: 100%; padding: 0 15px;}
     .videoRight{display: none;}
@@ -1571,8 +1564,6 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
     .video_relevant li img{width: 30%; float: left;}
     .video_relevant li p{color: #666!important; display: block!important; position: static!important;}
     /*============================================video detail end============================================*/
-
-    /*============================================zb============================================*/
 
     .videoPlay video{width: 100%; height: auto;}
 
@@ -1589,7 +1580,7 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
     .imgIndex {
         width: 100%;
     }
-.imgAct ul li div{width: 49%;}
+    .imgAct ul li div{width: 49%;}
     .bannerbox::before{content: ""; height: 100%; display:none; border-left:1px solid #ccc;left: 0; position: absolute; top: 0;}
     .bannerTitle{padding: 0 15px;}
     .img_banner{margin-left: 0;}
@@ -1604,8 +1595,8 @@ footer{width: 1000px; margin: 90px auto 0 auto; }
     .imgHeading h2{padding: 0 15px;width: 145px;}
     .imgActivity ul li .act_li div:first-of-type{height: auto;}
     .imgTabOn{display: none;}
-.goList{display: block;}
-.imgTab{width: 100%;}
+    .goList{display: block;}
+    .imgTab{width: 100%;}
     .pageFan{display: none;}
     .bannerTop{width: 100%;}
     .bannerTop .dots{padding:  10px 45%;}
