--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -7,20 +7,20 @@ header{width: 100%; }
 /*==pc端导航==*/
 .header_top{min-width: 1180px;height: 48px;border-top: 1px solid #dfdfdf;border-bottom: 1px solid #dfdfdf;background-color: #f8f8f8; }
 .header_topNav{width: 1180px; margin: 0 auto; position: relative;}
-.header_topNav .firstNav{float: left;}
-.header_topNav .firstNav>li{float: left;}
+/*.header_topNav .firstNav{float: left;}*/
+/*.header_topNav .firstNav>li{float: left;}*/
 .header_topNav .firstNav>li>a{display: block;height: 48px;line-height: 48px;padding: 0 15px;color: #333;font-size: 14px;}
 .header_topNav .firstNav>li:first-of-type a{padding-left: 0;}
 .lastClass{ position: relative;border-left: 1px solid rgba(0,0,0,0);border-right: 1px solid rgba(0,0,0,0); z-index: 1000;}
 .lastClass:hover{border-left: 1px solid #c7c7c7;border-right: 1px solid #c7c7c7;box-shadow: 0 -1px 1px #c7c7c7; background: #fff;}
-.lastClass:hover .downClass{display: block;}
+.lastClass:hover .downClass{display: flex; flex-wrap: wrap;}
 .lastClass:hover .more{color: #e20015;}
 .header_topNav .logo{display: none;}
 /*下拉菜单 */
 .downClass{position: absolute; right: -1px;top: 46px; width: 350px; background: #fff; border: 1px solid #c7c7c7;box-shadow: 0 1px 1px #c7c7c7; z-index: 1; border-top: 0; display: none;}
-.downClass:before{content: ''; display: block; position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
+.downClass:before{content: ''; display: flex; flex-wrap: wrap; position: absolute; width: 274px; border-top:  1px solid #c7c7c7; box-shadow: 0 0px 1px #c7c7c7; z-index: 1; height: 0; top: 0; left: 0;  }
 .downClass li{border-bottom: 1px dashed #c7c7c7; height: 48px;line-height: 48px; }
-.downClass li a{color: #333;font-size: 14px; float: left;  height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
+.downClass li a{color: #333;font-size: 14px; height: 48px;line-height: 48px; text-align: center; padding: 0 15px; }
 .downClass li a:hover{color: #e20015;}
 .downClass li:last-of-type{border-bottom: 0;}
 /*==移动端导航==*/
